examples/error/undeclared_identifier.rx
function void main() {
  print(hello());
}